Cleaned Up Log Messages. Refactored Loader to parse through relevant blocks of text rather than parsing through the entire text file for each country/province